resizing and fixing navbar so it's always visible

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -10,16 +10,17 @@ nav {
 }
 
 nav img {
-    display: block;
+    display: inline;
 }
 
 nav h1 {
-    display: block;
+    display: inline;
     color: #f5f7e1;
     font-weight: 400;
     font-size: 25px;
     /*----Only for < 700 px screens, see media query below*/
     text-transform: uppercase;
+    vertical-align: middle;
 }
 
 nav li {
@@ -32,8 +33,8 @@ nav li {
 @media (min-width: 700px) {
     nav img {
         display: inline;
-        width: 150px;
-        height: 125px;
+        width: 60px;
+        height: 50px;
     }
 
     nav h1 {
@@ -45,6 +46,13 @@ nav li {
         text-transform: uppercase;
     }
 }
+
+@media (max-width: 340px) {
+    nav h1 {
+        font-size: 20px;
+    }
+}
+
 
 /*----------------------------------------------------Hero Image Home page---------------*/
 
